--- a/src/main.scss
+++ b/src/main.scss
@@ -26,6 +26,9 @@ body {
   font-weight: 400;
   text-transform: uppercase;
 }
+.no-scroll {
+  overflow: hidden;
+}
 
 .btn {
   display: inline-block;
@@ -36,6 +39,63 @@ body {
   text-decoration: none;
   border-radius: 4px;
   text-align: center;
+  overflow: hidden;
+  position: relative;
+  span {
+    position: relative;
+    z-index: 2;
+    transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+    transition-delay: .15s;
+    svg {
+      path {
+        transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+        transition-delay: .15s;
+      }
+    }
+  }
+  &:after {
+    z-index: 1;
+    display: block;
+    content: url('./images/triangle-yellow.svg');
+    position: absolute;
+    width: 100%;
+    height: auto;
+    top: 100%;
+    left: 0;
+    transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+    transition-delay: .15s;
+  }
+  &.light-blue {
+    &:after {
+      content: url('./images/triangle-dark-blue.svg');
+    }
+    &:hover {
+      span {
+        color: $color-white;
+      }
+      svg {
+        path {
+          fill: $color-white!important;
+        }
+      }
+    }
+  }
+  &:hover {
+    span {
+      color: $color-dark-blue;
+      transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+      svg {
+        path {
+          transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+          fill: $color-dark-blue!important;
+        }
+      }
+    }
+    &:after {
+      transition: 0.5s cubic-bezier(0.83, 0, 0.17, 1);
+      top: -90px;
+    }
+  }
 }
 
 h2 {
@@ -43,6 +103,13 @@ h2 {
   margin: 0;
   font-size: 2.125rem;
   line-height: 0.8823529412;
+}
+
+a {
+  transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+  &:hover {
+    transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+  }
 }
 
 // Animations
@@ -97,12 +164,24 @@ header {
         &#profile {
           display: none;
         }
-        svg {
-          display: block;
-          width: auto;
-          height: 100%;
-          path {
-            fill: $color-white;
+        a {
+          transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+          svg {
+            display: block;
+            width: auto;
+            height: 100%;
+            path {
+              fill: $color-white;
+              transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+            }
+          }
+          &:hover {
+            svg {
+              path {
+                transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                fill: $color-yellow;
+              }
+            }
           }
         }
       }
@@ -143,6 +222,91 @@ header {
   }
 }
 
+// Navigation
+nav#primary-navigation {
+  display: block;
+  position: fixed;
+  top: 65px;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 16;
+  background: $color-dark-blue;
+  background: linear-gradient(180deg, rgba(34,60,104,1) 0%, rgba(22,29,52,1) 100%);
+  transition: .25s all;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  &.active {
+    transition: .25s all;
+    pointer-events: all;
+    opacity: 1;
+    visibility: visible;
+  }
+  .container {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    width: 100%;
+    height: -ms-calc(100vh - 65px);
+    height: calc(100vh - 65px);
+    max-width: 1140px;
+    padding: 1rem;
+    margin: 0 auto;
+    ul {
+      flex: 0 1 auto;
+      width: 100%;
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      li {
+        text-align: center;
+        a {
+          color: $color-white;
+          text-decoration: none;
+          transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+          &:hover {
+            color: $color-yellow;
+            transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+          }
+        }
+      }
+      &.main {
+        li {
+          a {
+            font-size: 1.5rem;
+            line-height: 2.0833333333;
+          }
+        }
+      }
+      &.secondary {
+        li {
+          margin-top: 1rem;
+          a {
+            font-size: 1rem;
+            line-height: 1.125;
+            svg {
+              height: 1rem;
+              margin-right: .5rem;
+              path {
+                fill: $color-white;
+                transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+              }
+            }
+            &:hover {
+              svg {
+                path {
+                  fill: $color-yellow;
+                  transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
 // Hero Section
 .hero-section {
   display: block;
@@ -573,6 +737,7 @@ header {
                   font-size: 2.125rem;
                   line-height: 0.8823529412;
                   margin: 0;
+                  min-height: 4.25rem;
                 }
                 span.availability {
                   display: block;
@@ -597,8 +762,10 @@ header {
               border: 1px solid $color-white;
               box-shadow: none;
               background: none;
+              transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
               &.glide__bullet--active {
                 background: $color-white;
+                transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
               }
             }
           }
@@ -654,6 +821,9 @@ footer {
                     fill: $color-white;
                   }
                 }
+                &:hover {
+                  color: $color-yellow;
+                }
               }
               &.logo {
                 a {
@@ -697,6 +867,13 @@ footer {
     line-height: 1;
   }
   
+  // Navigation
+  nav#primary-navigation {
+    .container {
+      padding: 2rem;
+    }
+  }
+
   // Hero Section
   .hero-section {
     background: linear-gradient(90deg, #223c68 0%, #161d34 100%);
@@ -940,12 +1117,44 @@ footer {
     }
   }
 
+  // Navigation
+  nav#primary-navigation {
+    position: relative;
+    top: unset;
+    left: unset;
+    right: unset;
+    z-index: unset;
+    background: linear-gradient(90deg, #223c68 0%, #161d34 100%);
+    transition: none;
+    visibility: visible;
+    opacity: 1;
+    pointer-events: all;
+    .container {
+      flex-flow: row wrap;
+      height: auto;
+      padding: 1.125rem 1rem;
+      ul {
+        display: flex;
+        flex-flow: row nowrap;
+        width: 100%;
+        justify-content: space-between;
+        li {
+          flex: 0 0 auto;
+        }
+        &.secondary {
+          justify-content: space-around;
+        }
+      }
+    }
+  }
+
   // Hero Section
   .hero-section {
     &:after {
       min-height: 250px;
     }
     .container {
+      padding: 0;
       min-height: 500px;
       .col {
         &.col-1 {
@@ -962,10 +1171,10 @@ footer {
           }
           .triangle {
             &.blue {
-              bottom: -288px;
+              bottom: -320px;
             }
             &.yellow {
-              bottom: -265px;
+              bottom: -297px;
             }
           }
         }
@@ -1105,6 +1314,9 @@ footer {
                     font-size: 1.125rem;
                     line-height: 1.6666666667;
                   }
+                  h3 {
+                    min-height: unset;
+                  }
                 }
               }
             }
@@ -1159,6 +1371,16 @@ footer {
                     margin-right: .25rem;
                     path {
                       fill: $color-white;
+                      transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                    }
+                  }
+                  &:hover {
+                    color: $color-yellow;
+                    svg {
+                      path {
+                        transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                        fill: $color-yellow;
+                      }
                     }
                   }
                 }
@@ -1193,6 +1415,17 @@ footer {
                       line-height: 0;
                       svg {
                         height: 1.5rem;
+                        path {
+                          transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                        }
+                      }
+                      &:hover {
+                        svg {
+                          path {
+                            transition: 0.25s cubic-bezier(0.83, 0, 0.17, 1);
+                            fill: $color-yellow;
+                          }
+                        }
                       }
                     }
                     &:last-child {
